--- a/index.html
+++ b/index.html
@@ -8,6 +8,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section>
+        <div class="one">
+            <img src="new folder/Oli.jpg" alt="">
+            <h2>Ayman Oli</h2>
+            <span class="three">Font End developer</span>
+            <ul>
+                <li>
+                    <a href="#">home</a>
+                    <a href="#">about</a>
+                    <a href="#">education</a>
+                    <a href="#">protfolio</a>
+                    <a href="#">contact</a>
+                </li>
+            </ul>
+        </div>
+        <div class="one two">
+            <h4>HI THERE!</h4>
+            <h1>I'M<span class="four">Ayman Oli</span></h1>
+            <p>currently i'm doing a complete web developing course with jhankar mahbub, after finish this course you can hire me a little web developer, sir</p>
+        </div>
+    </section>
+
 </body>
 </html>
