--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <section>
         <div class="one">
-            <img src="new folder/Oli.jpg" alt="">
+            <img src="images/Oli.jpg" alt="">
             <h2>Ayman Oli</h2>
             <span class="three">Font End developer</span>
             <ul>
