--- a/index.html
+++ b/index.html
@@ -63,5 +63,8 @@
             </div>
         </div>
     </section>
+    <footer>
+        <p>© Peter Parker 2021, a Programming Hero initiative.</p>
+    </footer>
 </body>
 </html>
